# magpitutorial3

./: CMakeLists.txt  HelloMagPi.S
